# osdp-team6

./: .dockerignore  .gitignore  .gitmodules  AUTHENTICATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DESIGN.md  Dockerfile  Dockerfile.orchestrator  README.md  RENDER_DEPLOYMENT.md  STATUS.md  demo_ai_integration.py.bak  demo_full_workflow.py  jira_tokens.db  main.py  mkdocs.yml  pyproject.toml  pytest.ini  render-orchestrator.yaml  render.yaml  requirements.txt  test_tokens.db
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
claude_implementation_pkg/: __init__.py  claude_implementation.py
docs/: README.md  architecture.md  component.md  index.md  monitoring.md  telemetry.md  testing.md  testing_and_monitoring_summary.md
docs/api/: mail_client_adapter.md  mail_client_service.md  ticket_api.md  ticket_client_adapter.md  ticket_client_generated.md  ticket_impl.md  ticket_service.md
openai_implementation_pkg/: __init__.py  openai_implementation.py
scripts/: README.md  check-deployment-ready.sh  deploy-render.sh  deploy.sh  fix_slack_packages.sh  generate_e2e_tokens.py  setup_deployed_tests.py  test_monitoring.py
src/ai_adapter/: README.md  pyproject.toml
src/ai_adapter/examples/: ai_ticket_integration.py  usage_example.py
src/ai_adapter/src/ai_adapter/: __init__.py  adapter.py
src/ai_adapter/src/ticket_ai_adapter/: __init__.py  adapter.py  ai_implementation_setup.py  base_adapter.py  models.py  openai_adapter.py  team_integration.py
src/ai_adapter/tests/: __init__.py  test_adapter.py  test_ai_adapter.py  test_models.py  test_openai_adapter.py
src/ai_implementations/: README.md  __init__.py  pyproject.toml
src/chat_api/: README.md  pyproject.toml
src/chat_api/src/chat_api/: __init__.py  shared_interface.py
src/claude_implementation_pkg/: claude_implementation.py
src/claude_service_client/: pyproject.toml
src/claude_service_client/fast_api_client/api/authentication/: auth_callback_auth_callback_get.py  login_auth_login_get.py  logout_auth_logout_get.py
src/claude_service_client/fast_api_client/api/chat/: send_chat_message_chat_post.py
src/claude_service_client/fast_api_client/api/monitoring/: health_check_health_get.py
src/claude_service_client/fast_api_client/models/: chat_request.py  chat_response.py  http_validation_error.py
src/gmail_client_impl/: README.md  pyproject.toml
src/mail_client_adapter/: README.md  __init__.py  adapter.py  pyproject.toml
src/mail_client_adapter/src/mail_client_adapter/: __init__.py  adapter.py
src/mail_client_adapter/tests/: __init__.py  test_adapter.py
src/mail_client_api/: README.md  pyproject.toml
src/mail_client_service/: README.md  __init__.py  constants.py  main.py  models.py  pyproject.toml
src/mail_client_service/src/mail_client_service/: constants.py  main.py  models.py
src/mail_client_service/tests/: test_mail_client_service.py  test_models_client_service.py
src/mail_client_service_client/: README.md  __init__.py  pyproject.toml
src/mail_client_service_client/mail_client_api_service_client/: __init__.py
src/mail_client_service_client/mail_client_api_service_client/api/default/: delete_message_messages_message_id_delete.py  get_message_detail_messages_message_id_get.py  get_messages_summary_messages_get.py  mark_message_as_read_messages_message_id_mark_as_read_post.py
src/mail_client_service_client/mail_client_api_service_client/models/: __init__.py  message_detail.py  message_summary.py
src/openai_implementation_pkg/: openai_implementation.py
src/orchestrator/: README.md  pyproject.toml
src/orchestrator/src/orchestrator/: __init__.py  main_app.py  orchestrator_service.py  telemetry.py
src/orchestrator/src/orchestrator/static/: metrics-dashboard.html
src/ticket_api/: README.md  pyproject.toml
src/ticket_api/src/ticket_api/: __init__.py  exceptions.py  interface.py  models.py  shared_interface.py
src/ticket_api/tests/: test_adapter.py  test_api_contract.py  test_edge_cases.py  test_exceptions.py
src/ticket_client_adapter/: README.md
src/ticket_client_adapter/src/ticket_client_adapter/: client.py
src/ticket_client_adapter/tests/: test_adapter.py  test_adapter_errors.py  test_additional_methods.py
src/ticket_client_generated/: README.md
src/ticket_client_generated/tests/: test_generated_client.py
src/ticket_client_generated/ticket_service_client/models/: ticket_update_request.py
src/ticket_impl/: README.md  pyproject.toml  test_tokens.db
src/ticket_impl/tests/: conftest.py  test_ticket_impl.py
src/ticket_service/: README.md  pyproject.toml
src/ticket_service/tests/: jira_tokens.db  test_endpoints.py  test_telemetry.py  test_ticket_service.py
stubs/chat_api/: chat_api.pyi
stubs/dotenv/: __init__.pyi
stubs/fastapi/: __init__.pyi  responses.pyi  testclient.pyi
stubs/fastapi/middleware/: __init__.pyi  cors.pyi
stubs/httpx/: __init__.pyi
stubs/pytest/: __init__.pyi
stubs/respx/: __init__.pyi
stubs/starlette/: __init__.pyi  applications.pyi  requests.pyi  responses.pyi
stubs/starlette/middleware/: __init__.pyi  base.pyi
terraform/: README.md  main.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
tests/: README.md  __init__.py  conftest.py  test_ai_implementation_setup.py  test_base_adapter_extended.py  test_claude_implementation.py  test_main_app.py  test_openai_implementation.py  test_orchestrator_service.py
tests/e2e/: SETUP.md  conftest.py  test_complete_workflow_with_formatting.py  test_comprehensive_e2e.py  test_e2e_deployed.py  test_e2e_real_credentials.py  test_e2e_workflows.py  test_full_pipeline_e2e.py  test_full_stack_e2e.py  test_main_application.py
tests/integration/: test_adapter_to_service.py  test_ai_adapters_simple.py  test_ai_ticket_integration.py  test_chat_ai_tickets_integration.py  test_client_integration.py  test_multi_component_workflow.py  test_orchestrator_integration.py  test_service_adapter_integration.py  test_service_integration.py  test_service_with_real_client.py  test_team_integration.py
(+8 files in other folders)
