[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticket-ai-adapter"
version = "0.1.0"
description = "AI service adapter for ticket operations with natural language processing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ticket-api",
    "pydantic>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ticket_ai_adapter"]

[tool.hatch.build.targets.wheel.force-include]
"src/ticket_ai_adapter/py.typed" = "ticket_ai_adapter/py.typed"

[tool.ruff]
line-length = 100
target-version = "py311"
extend = "../../pyproject.toml"

[tool.ruff.lint]
ignore = []