[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticket-ai-adapter"
version = "0.1.0"
description = "AI service adapter for ticket operations with natural language processing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ticket-api",
    "pydantic>=2.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
claude = [
    "fast-api-client",
]
team-integrations = [
    "ai-chat-api",
    "ai-api",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ticket_ai_adapter"]

[tool.hatch.build.targets.wheel.force-include]
"src/ticket_ai_adapter/py.typed" = "ticket_ai_adapter/py.typed"

[tool.ruff]
line-length = 100
target-version = "py311"
extend = "../../pyproject.toml"

[tool.ruff.lint]
ignore = [
    "PLC0415",  # Import not at top-level (lazy imports for optional AI dependencies)
]

[tool.ruff.lint.per-file-ignores]
"src/ticket_ai_adapter/adapter.py" = ["PLR0911", "C901"]  # Complex tool routing logic
"src/ticket_ai_adapter/openai_adapter.py" = ["PLR0911"]  # Tool routing logic
"src/ticket_ai_adapter/team_integration.py" = ["PLR0911"]  # Tool routing logic
"tests/*.py" = ["SLF001"]  # Allow private member access in tests