[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-implementations"
version = "0.1.0"
description = "Concrete AI interface implementations"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
namespaces = false
