[project]
name = "fast-api-client"
version = "0.1.0"
description = "A client library for accessing FastAPI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.23.0,<0.29.0",
    "attrs>=22.2.0",
    "python-dateutil>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]