[project]
name = "mail_client_adapter"
version = "0.1.0"
description = "HTTP client adapter for mail client operations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
    "attrs>=23.0.0",
]

[tool.uv.sources]
mail_client_api = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"