[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mail-client-adapter"
version = "0.1.0"
description = "Adapter for mail client service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mail-client-api",
]

[tool.uv.sources]
mail-client-api = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/mail_client_adapter"]

[tool.hatch.build.targets.wheel.force-include]
"src/mail_client_adapter/py.typed" = "mail_client_adapter/py.typed"

[tool.ruff]
line-length = 100
target-version = "py311"
extend = "../../pyproject.toml"

[tool.ruff.lint]
ignore = []