[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mail-client-service"
version = "0.1.0"
description = "FastAPI web service exposing mail operations through REST endpoints"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "pydantic",
    "httpx",
    "mail-client-api",
]

[tool.uv.sources]
mail-client-api = { workspace = true }
gmail_client_impl = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/mail_client_service"]

[tool.hatch.build.targets.wheel.force-include]
"src/mail_client_service/py.typed" = "mail_client_service/py.typed"

[tool.ruff]
line-length = 100
target-version = "py311"
extend = "../../pyproject.toml"

[tool.ruff.lint]
ignore = []